--- a/latex/os-research.tex
+++ b/latex/os-research.tex
@@ -187,7 +187,7 @@
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
-\title{ \Huge \textbf{ Digital Democracy For Iran } \\[0.5cm]}
+\title{ \Huge \textbf{ Enhancing Democracy For The People of Iran Through Social Digital Innovation } \\[0.5cm]}
 
 \author{
 
@@ -202,45 +202,35 @@
 
 \maketitle
 
-
-
-%\tableofcontents
-% \note{TODO: social impact}
-
 \section{Abstract}
 
-This research seeks to explore innovative solutions, platforms, and tools for enhancing the democratic process in Iran. By examining the current state of digital democracy and considering potential future developments, this study aims to provide actionable insights for both immediate implementation and long-term planning. In doing so, the research addresses the unique cultural, social, and political context of Iran while drawing upon global best practices and emerging trends in digital democracy. Ultimately, this research strives to contribute to the promotion of a more inclusive, participatory, and responsive democratic environment in Iran.
-This research is open source, transparent and accessible through the Github repository \url{https://github.com/oalee/os-digital-democracy-iran}. 
+This research aims to explore innovative solutions, platforms, and tools for enhancing the democray for the people of Iran by leveraging digital technologies. By examining the current state of digital democracy and considering potential future developments, this study seeks to provide actionable insights for both immediate implementation and long-term planning. The research addresses the unique cultural, social, and political context of Iran while drawing upon global best practices and emerging trends in digital democracy. Ultimately, this research aspires to promote a more inclusive, participatory, and responsive democratic environment in Iran. The project's open source, transparent, and accessible nature is maintained through its Github repository: \url{https://github.com/oalee/os-digital-democracy-iran}.
 
-\section{Problem Statement}
+\section{Introduction}
 
-In this study, we will focus on the two main sub-problems identified in the Problem Statement section, namely the uncertainty about the future and the lack of knowledge and education among the people of Iran. The aim of this study is to provide insights into these challenges and propose potential solutions that could empower Iranians to create a more democratic society and secure a better future. Through an in-depth analysis of these issues, we hope to contribute to the Women.Life.Freedom movement's efforts and assist in overcoming these obstacles in their quest for a brighter future for Iran.
+The rapid advancement of digital communication technologies has significantly impacted political and social interactions in recent years. Digital democracy, a relatively new concept, has gained substantial traction as a form of democracy enabled by digital technologies. Characterized by the utilization of digital tools and platforms, digital democracy facilitates the democratic process and incorporates innovative approaches to democracy.
+This work investigates state-of-the-art digital democracy platforms and methodologies, providing digital democracy solutions tailored for the Iranian context. Furthermore, this research proposes an open-source, open-science methodology and platform for democratic writing that addresses the needs of the Iranian people.
 
+\section{Motivation}
 
+Democracy is essential for fostering inclusive and just societies. However, the people of Iran currently face a totalitarian regime that restricts their access to democratic processes. Digital democracy offers a potential solution by leveraging digital technologies to overcome the challenges posed by the current regime.
+For instance, the Mahsa Prism's democracy could be enhanced using the proposed methodology. This would involve open-sourcing the Mahsa Prism, increasing the transparency of the process, analyzing public opinions on social media, and establishing a question-and-answer platform to address the concerns of the Iranian people.
+Furthermore, research on digital democracy can contribute to the development of democratic processes in a future democratic Iran. This can be achieved by investigating the current state of digital democracy and proposing new solutions that align with the diverse cultural context of the Iranian people.
 
-\subsection{Uncertainty About The Future}
-The uncertainty about the future is a significant challenge faced by the Women.Life.Freedom movement in Iran. 
-People's fear of what will happen can make it challenging to mobilize and motivate them to continue their struggle.
-The prospect of another totalitarian regime in Iran, similar to what happened in other failed revolutions, adds to this fear.
+\section{Research Questions}
 
+This research project aims to address the following research questions:
 
-To overcome this challenge, a well-researched and scientifically sound plan for the future can help mitigate the uncertainties faced by the Iranian people. Such a plan should be grounded in empirical evidence and scientific research, addressing the challenges facing the country and offering practical solutions for a more democratic and equitable society. By offering a clear and actionable roadmap for the future, the movement can inspire Iranians to work together towards a shared vision and overcome their fears of uncertainty.
+\begin{enumerate}
+\item What innovative digital democracy platforms and methodologies can be employed to facilitate democratic processes for the people of Iran in the present, considering their restricted access to democracy under the current regime?
+\item How can digital democracy platforms and methodologies be adapted to ensure their effectiveness in the Iranian context, taking into account the unique cultural, social, and political landscape of the country?
+\item In a future scenario where Iran transitions to a democratic system, what scientific methodologies and digital democracy solutions can be implemented to strengthen and sustain democratic processes in the country?
+% \item How can the lessons learned from digital democracy initiatives in other countries be applied to the Iranian context, both in the present situation and in a future democratic Iran?
+\end{enumerate}
 
-% \subsubsection{Lack of knowledge and education}
-\subsection{Lack of Knowledge and Education}
+By addressing these research questions, the study aims to contribute to the understanding of digital democracy and its potential impact on the Iranian context, providing insights for the development and implementation of digital democracy solutions tailored to the needs and aspirations of the Iranian people under different political scenarios.
 
-Access to knowledge and education is crucial for the Women.Life.Freedom movement in Iran to establish a democratic society and create a better future. However, the current regime controls education in Iran, limiting access to information and knowledge, spreading their propaganda and affecting the mind of young, and hindering the ability of Iranians to defend themselves against oppressive forces.
-
-To address this challenge, the Women.Life.Freedom movement could prioritize the development of an alternative open science online platform for education of all Iranians, starting with schoolgirls who are often most in need of access to education. The movement could also advocate for policies that prioritize secular online education alternative and provide resources to people of Iran to ensure a well-rounded education.
-By empowering Iranians with the knowledge and skills to defend themselves and advocating for a more democratic society, the Women.Life.Freedom movement can pave the way for a brighter future.
-
-% Knowledge and education are the most important factors in a democracy and creation of a better future.
-
-% However, many people in Iran lack access to the resources necessary to defend themselves against oppressive forces.
-
-% Nika Shahkarami died because of lack of knowledge and education. If she was educated that 
-% the regime tracks people's location through their phones, she might have been alive today.
-% People still do not have any resources to learn how to defend against physical and mental abuse and mind games of the regime. 
+% \section{Problem Statement}
 
 
 % \subsubsection{Lack of an opposition/coalition}
@@ -254,18 +244,6 @@ By empowering Iranians with the knowledge and skills to defend themselves and ad
 %     \item How could we facilitate giving birth to a coalition?
 
 
-\section{Introduction}
-
-The rapid advancement of technology, particularly in digital communication, has substantially impacted political and social interactions in recent years. This research investigates the feasibility of establishing a representative system and an open science assembly among the Iranian diaspora, focusing on the development of scientifically robust plans for environmental restoration, education, and other critical areas. The study's novelty lies in its comprehensive approach, combining theoretical insights, empirical evidence, and data-driven methodologies to evaluate the potential of such a system for addressing the challenges faced by Iran.
-
-Digital democracy offers a unique opportunity to revolutionize decision-making processes by enabling citizens to participate directly in shaping public policies and addressing pressing societal issues, such as environmental conservation and education reform \cite{coleman2009internet}. By harnessing digital platforms and tools, citizens can engage in informed deliberation, collaborate on policy proposals, and hold public officials accountable.
-
-This research aims to assess the feasibility of creating a representative system among the Iranian diaspora, emphasizing scientific research and the development of strategic plans. The primary goal is to determine how such a system could foster collaboration and effectively address Iran's challenges through data-driven methodologies and the analysis of public opinion.
-
-% This work is structured as follows: First, we provide an overview of the key concepts, including digital democracy, environmental restoration, and education reform. Next, we examine the current state of these areas in Iran, identifying challenges and opportunities. We then explore the feasibility of establishing a representative system and an open science assembly among the Iranian diaspora, aimed at promoting scientific research and collaboration. Subsequently, we evaluate the potential of integrating digital democracy methodologies into the proposed plans and the development of a roadmap for Iran's future. Finally, we outline the necessary steps to harness digital democracy for sustainable development and progress.
-
-By assessing the feasibility of a representative system and an open science assembly, this research aims to enhance understanding of how technology and data-driven methodologies can empower citizens and promote more inclusive, transparent, and effective governance in Iran. The findings may also serve as valuable insights for policymakers, practitioners, and researchers in other countries seeking to leverage digital democracy for environmental restoration, education reform, and other vital areas of societal development.
-
 \section{Background Information}
 
 \subsection{Open Source}
@@ -274,7 +252,7 @@ Open source is a development methodology that emphasizes collaboration, transpar
 \subsection{Open Science}
 Open science is the movement to make scientific research and its dissemination accessible to all levels of society, whether amateur or professional. It promotes transparency and accessibility of knowledge, fostering its development and sharing through collaborative networks. Open science encompasses various aspects, including open access to publications, open data, open-source software, and open educational resources \cite{nielsen2011reinventing}.
 
-\subsection{Open Science Schools of Thought}
+\subsubsection*{Open Science Schools of Thought}
 There are five main schools of thought within open science, each emphasizing different aspects and motivations:
 
 \begin{enumerate}
@@ -360,14 +338,25 @@ By addressing these questions, academic research on digital democracy can contri
 
 \subsection{Civic Technology of Democracy}
 
-As articulated by Dr. Tsai Ing-Wen, the former President of Taiwan, the goal is to "build a unified democracy, not hijacked by ideologies; an efficient democracy that responds to the demands of the environment; and a pragmatic democracy that will let people take care of each other's feelings" 
 
 Civic technology, also known as civic tech, refers to the employment of technology to enhance the relationship between citizens and their governments, facilitate public participation, and promote democratic processes \cite{hollands2015civic}. It encompasses the development of digital platforms, tools, and applications that empower citizens to voice their opinions, engage in decision-making, and hold governments accountable \cite{susha2015civic}. Examples of civic technology include online platforms for policy deliberation, participatory budgeting, and crowdsourcing solutions to local problems \cite{schrock2016civic}.
+
+As articulated by Dr. Tsai Ing-Wen, the former President of Taiwan, the goal is to "build a unified democracy, not hijacked by ideologies; an efficient democracy that responds to the demands of the environment; and a pragmatic democracy that will let people take care of each other's feelings" 
 
 Civic technology constitutes a critical component of digital democracy, as it can help bridge the gap between citizens and their governments, fostering greater transparency, responsiveness, and collaboration in addressing societal challenges \cite{townsend2013smart}. By leveraging civic technology, democratic processes can become more inclusive and effective, leading to improved public policies and services that reflect the needs and values of all citizens \cite{hollands2015civic}.
 
 A case in point is the 1922 Citizen Hotline in Taiwan, which enables citizens to voice their opinions and concerns, provide feedback on government decision-making, and report issues related to public services. During the COVID-19 pandemic, a child called the hotline to complain about receiving a pink mask and expressed embarrassment at having to wear it due to gender stereotypes. In response, hospitals and government officials announced that they would begin using pink masks, challenging gender stereotypes and promoting social innovation.
 
+
+
+
+\subsection{Safeguarding Technology Integration in a Modern World}
+
+As technology advances at an exponential rate, it is crucial to strategically integrate it into our lives without allowing it to dominate our existence. One effective approach to achieve this balance is by implementing a systematic trial and error process, as demonstrated by Taiwan's Smart City initiative. This innovative sandbox system allows for the testing and evaluation of new ideas and technologies, such as robotics, whose implications are yet to be fully understood.
+
+By temporarily relaxing regulations and monitoring the impact of these innovations over a one-year trial period, Taiwan gains valuable insights into how new technologies can be safely integrated with their legal framework and the lives of their citizens. This method fosters a controlled environment for innovation and technological advancement, ensuring a secure path towards the future for our species.
+
+Iran can take inspiration from Taiwan's Smart City model to develop multiple smart cities tailored to the unique needs and characteristics of its various regions or ethnicities. This approach not only encourages investment and capital growth but also offers opportunities for cutting-edge research in areas that would otherwise remain unexplored. By adopting a similar system, Iran can ensure safe technological integration while promoting innovation and progress in the modern world.
 
 
 % \subsection{Civic Technology of Democracy}
@@ -387,6 +376,7 @@ A case in point is the 1922 Citizen Hotline in Taiwan, which enables citizens to
 
 % It is important, however, to ensure that technology is used ethically, transparently, and with respect for individual privacy. By embracing innovative digital democracy platforms and using technology responsibly, we can work towards building a more inclusive, participatory, and responsive democracy that reflects the needs and interests of all citizens.
 
+\section{Related Work}
 
 \subsection{Pol.is}
 A digital democracy widely used tool is pol.is. Pol.is is a social media platform equivalent to a town hall. In contrast, other social media platforms could be viewed as nightclubs and bars where people shout, fight, scream and the extreme ends of society are highlighted. Pol.is is a platform where people can participate in deliberation and rational discussions, synthesize solutions and reach consensus.
@@ -403,14 +393,6 @@ In line with a human-centered design approach, PDIS places citizens' needs and e
 % PDIS has also created digital democracy tools like vTaiwan and Join, which provide citizens with platforms for collaborative decision-making and policy development. These tools use deliberative democracy techniques and digital technology to promote consensus-building and participation in the democratic process.
 % Overall, PDIS represents an innovative approach to public problem-solving, leveraging the power of digital technology and citizen engagement to create more inclusive, participatory, and responsive democratic processes.
 
-
-\subsection{Safeguarding Technology Integration in a Modern World}
-
-As technology advances at an exponential rate, it is crucial to strategically integrate it into our lives without allowing it to dominate our existence. One effective approach to achieve this balance is by implementing a systematic trial and error process, as demonstrated by Taiwan's Smart City initiative. This innovative sandbox system allows for the testing and evaluation of new ideas and technologies, such as robotics, whose implications are yet to be fully understood.
-
-By temporarily relaxing regulations and monitoring the impact of these innovations over a one-year trial period, Taiwan gains valuable insights into how new technologies can be safely integrated with their legal framework and the lives of their citizens. This method fosters a controlled environment for innovation and technological advancement, ensuring a secure path towards the future for our species.
-
-Iran can take inspiration from Taiwan's Smart City model to develop multiple smart cities tailored to the unique needs and characteristics of its various regions or ethnicities. This approach not only encourages investment and capital growth but also offers opportunities for cutting-edge research in areas that would otherwise remain unexplored. By adopting a similar system, Iran can ensure safe technological integration while promoting innovation and progress in the modern world.
 % \section{Research Questions}
 
 % \subsection{How could we minimize the uncertainties about the future?}
@@ -446,66 +428,66 @@ This research plan is grounded in empirical data. The first step involves gather
 By using a collaborative, data-driven approach, this research aims to produce results that are relevant, transparent, and replicable.
 
 
-\section{Road Map}
+% \section{Road Map}
 
-A scientific methodology for digital democracy can play a vital role in defining the road map for the future of Iran. The use of digital democracy platforms, such as pol.is, can help address polarizing issues like the Iranian flag by promoting rational discussions and consensus-building. By working through the details of such issues, citizens can then build consensus on larger issues, rather than being restricted to binary options of Constitutionalism or Republicanism.
-Digital democracy can also provide a means for citizens to engage in the decision-making process and collaborate on policy proposals. Innovative digital democracy platforms that use artificial intelligence to analyze public opinion can offer insights into citizens' views on critical issues, and can inform policymaking and enhance the democratic process.
+% A scientific methodology for digital democracy can play a vital role in defining the road map for the future of Iran. The use of digital democracy platforms, such as pol.is, can help address polarizing issues like the Iranian flag by promoting rational discussions and consensus-building. By working through the details of such issues, citizens can then build consensus on larger issues, rather than being restricted to binary options of Constitutionalism or Republicanism.
+% Digital democracy can also provide a means for citizens to engage in the decision-making process and collaborate on policy proposals. Innovative digital democracy platforms that use artificial intelligence to analyze public opinion can offer insights into citizens' views on critical issues, and can inform policymaking and enhance the democratic process.
 
-Digital democracy can promote greater citizen engagement and participation, ultimately leading to a more inclusive and responsive democratic process that reflects the needs and values of all citizens. This can empower citizens to play an active role in shaping the future of Iran and in creating innovative solutions to public problems.
-As Iran continues to navigate its future, embracing digital democracy can provide a new path for progress and consensus-building, leading to a more unified, efficient, and pragmatic democracy that benefits all members of society.
+% Digital democracy can promote greater citizen engagement and participation, ultimately leading to a more inclusive and responsive democratic process that reflects the needs and values of all citizens. This can empower citizens to play an active role in shaping the future of Iran and in creating innovative solutions to public problems.
+% As Iran continues to navigate its future, embracing digital democracy can provide a new path for progress and consensus-building, leading to a more unified, efficient, and pragmatic democracy that benefits all members of society.
 
-However, it is important to note that further research is required to adapt the current state-of-the-art digital democracy platforms to match the culture of Iranians, localize the platforms, and scale them to the population of Iran. For example, the current digital democracy platform in Taiwan has a population of around 20 million, whereas Iran has a population of approximately 84 million. Therefore, it is necessary to explore the feasibility of implementing such platforms in a country with a larger population and different cultural and political contexts. By conducting research and tailoring digital democracy platforms to meet the needs of Iranian citizens, the potential benefits of digital democracy can be fully realized.
-\section{Research Questions for the Open Science Coalition and Representative Assembly}
+% However, it is important to note that further research is required to adapt the current state-of-the-art digital democracy platforms to match the culture of Iranians, localize the platforms, and scale them to the population of Iran. For example, the current digital democracy platform in Taiwan has a population of around 20 million, whereas Iran has a population of approximately 84 million. Therefore, it is necessary to explore the feasibility of implementing such platforms in a country with a larger population and different cultural and political contexts. By conducting research and tailoring digital democracy platforms to meet the needs of Iranian citizens, the potential benefits of digital democracy can be fully realized.
+% \section{Research Questions for the Open Science Coalition and Representative Assembly}
 
-To effectively address the challenge of creating a representative coalition and assembly, we have identified the following key research questions to guide our investigation and analysis:
+% To effectively address the challenge of creating a representative coalition and assembly, we have identified the following key research questions to guide our investigation and analysis:
 
-\subsection{How many members should the coalition and assembly have?}
-The coalition and assembly aim to represent the diverse population of Iran, including various ethnicities such as Kurds, Balouch, Azari, and others. A small number of members, such as seven, would not adequately represent the people of Iran. To ensure comprehensive representation and inclusivity, the coalition and assembly could consist of hundreds of members. This larger size would enable a broader range of perspectives and a more accurate representation of Iran's diverse population, fostering equitable decision-making and policy development.
+% \subsection{How many members should the coalition and assembly have?}
+% The coalition and assembly aim to represent the diverse population of Iran, including various ethnicities such as Kurds, Balouch, Azari, and others. A small number of members, such as seven, would not adequately represent the people of Iran. To ensure comprehensive representation and inclusivity, the coalition and assembly could consist of hundreds of members. This larger size would enable a broader range of perspectives and a more accurate representation of Iran's diverse population, fostering equitable decision-making and policy development.
 
-\subsection{What are the objectives of the assembly?}
-The assembly should represent the people of Iran to the world and plan for the country's future. Open science case studies can be conducted in all aspects of governance to create solid plans for Iran's future once the Islamic Republic is overthrown. A well-prepared plan for the future would clarify uncertainties and support the people of Iran in their efforts to bring about governmental change and a better path toward the future.
+% \subsection{What are the objectives of the assembly?}
+% The assembly should represent the people of Iran to the world and plan for the country's future. Open science case studies can be conducted in all aspects of governance to create solid plans for Iran's future once the Islamic Republic is overthrown. A well-prepared plan for the future would clarify uncertainties and support the people of Iran in their efforts to bring about governmental change and a better path toward the future.
 
-\subsection{What are the core principles of the assembly?}
-In this section, we propose three principles:
+% \subsection{What are the core principles of the assembly?}
+% In this section, we propose three principles:
 
-\subsubsection{Openness and Transparency}
-Openness and transparency are crucial for ensuring the assembly's credibility and trustworthiness. All assembly operations should be digitally transparent. Members communicate via the internet, making data publicly available, and all communication, whether in-person or online, is live-streamed. The assembly's finances are digitally transparent, and all software is open-source.
+% \subsubsection{Openness and Transparency}
+% Openness and transparency are crucial for ensuring the assembly's credibility and trustworthiness. All assembly operations should be digitally transparent. Members communicate via the internet, making data publicly available, and all communication, whether in-person or online, is live-streamed. The assembly's finances are digitally transparent, and all software is open-source.
 
-\subsubsection{Deliberative Democracy}
-Deliberative democracy emphasizes the importance of discussion and debate among members, allowing for a leaderless structure where the assembly operates as a heterarchy. This approach fosters collective decision-making and promotes a more inclusive, democratic environment.
+% \subsubsection{Deliberative Democracy}
+% Deliberative democracy emphasizes the importance of discussion and debate among members, allowing for a leaderless structure where the assembly operates as a heterarchy. This approach fosters collective decision-making and promotes a more inclusive, democratic environment.
 
-\subsubsection{Development of Open Scientific Plans for Iran's Future}
-The assembly will focus on creating open-source, open-science, peer-reviewed plans that result from rigorous research. Open-source science entails presenting the progress of the work and all its digital artifacts to the public, enabling collaboration with anyone worldwide, including individuals inside Iran. This approach allows people in Iran to submit their plans, raise questions and concerns about existing plans, and receive answers from researchers.
+% \subsubsection{Development of Open Scientific Plans for Iran's Future}
+% The assembly will focus on creating open-source, open-science, peer-reviewed plans that result from rigorous research. Open-source science entails presenting the progress of the work and all its digital artifacts to the public, enabling collaboration with anyone worldwide, including individuals inside Iran. This approach allows people in Iran to submit their plans, raise questions and concerns about existing plans, and receive answers from researchers.
 
-\subsection{Who are the members of the assembly?}
-The assembly should comprise representatives from all ethnicities and minorities in Iran, as well as the best candidates for developing the plans. Consequently, the primary members of the assembly may include activists, scientists, engineers, and artists. Expert groups can be established by these members to research various governmental aspects, such as banking and financial infrastructure, utilities infrastructure (water, electricity, gas), communications infrastructure (television, internet, radio), policing, national military, public health, rule of law, environmental sustainability, transitional government, transitional justice, democratic elections, education, and economy and commerce. Each field should have a dedicated team of at least 5 to 10 experts and researchers to propose and develop plans.
+% \subsection{Who are the members of the assembly?}
+% The assembly should comprise representatives from all ethnicities and minorities in Iran, as well as the best candidates for developing the plans. Consequently, the primary members of the assembly may include activists, scientists, engineers, and artists. Expert groups can be established by these members to research various governmental aspects, such as banking and financial infrastructure, utilities infrastructure (water, electricity, gas), communications infrastructure (television, internet, radio), policing, national military, public health, rule of law, environmental sustainability, transitional government, transitional justice, democratic elections, education, and economy and commerce. Each field should have a dedicated team of at least 5 to 10 experts and researchers to propose and develop plans.
 
-\subsection{What is the selection process for the members of the assembly?}
-The selection process must be transparent from the outset. Candidates who accept the assembly's core principles can apply for council membership by submitting a resume, proposal, livestream interviews with Iranians, and participating in open Q&A sessions. All application data is made publicly available. Organizations can only have representatives considered if they adhere to the assembly's transparency and openness protocols.
+% \subsection{What is the selection process for the members of the assembly?}
+% The selection process must be transparent from the outset. Candidates who accept the assembly's core principles can apply for council membership by submitting a resume, proposal, livestream interviews with Iranians, and participating in open Q&A sessions. All application data is made publicly available. Organizations can only have representatives considered if they adhere to the assembly's transparency and openness protocols.
 
-The candidate selection process and interviews are live-streamed, with members chosen based on their representativeness and meritocracy in conducting global case studies. Multiple NGOs can further analyze the data and submit online reports. Additionally, the Iranian diaspora can be officially asked to vote, using a secure protocol to forward the votes of relatives and friends inside Iran. Social media analysis can provide further insights into the opinions of people in Iran.
+% The candidate selection process and interviews are live-streamed, with members chosen based on their representativeness and meritocracy in conducting global case studies. Multiple NGOs can further analyze the data and submit online reports. Additionally, the Iranian diaspora can be officially asked to vote, using a secure protocol to forward the votes of relatives and friends inside Iran. Social media analysis can provide further insights into the opinions of people in Iran.
 
-The data can be analyzed through an open science methodology, which embraces digital democracy principles. By employing statistical analysis of all the collected data and developing a valid hypothesis with a high confidence interval, the members can attain legitimacy in their representativeness. This open science approach fosters greater transparency, collaboration, and inclusiveness in the selection process.
-\subsection{What is the selection process for plans?}
-Any open science peer-reviewed research proposal can be submitted by individuals for consideration in shaping the future of Iran. In cases where multiple plans are proposed for a specific subject, a deliberative process is used to identify the most suitable plan for Iran, with discussions continuing until a rough consensus is reached.
+% The data can be analyzed through an open science methodology, which embraces digital democracy principles. By employing statistical analysis of all the collected data and developing a valid hypothesis with a high confidence interval, the members can attain legitimacy in their representativeness. This open science approach fosters greater transparency, collaboration, and inclusiveness in the selection process.
+% \subsection{What is the selection process for plans?}
+% Any open science peer-reviewed research proposal can be submitted by individuals for consideration in shaping the future of Iran. In cases where multiple plans are proposed for a specific subject, a deliberative process is used to identify the most suitable plan for Iran, with discussions continuing until a rough consensus is reached.
 
-\subsection{How can people inside Iran participate in the assembly?}
-Digital tools can be employed to enable secure remote participation. Additionally, the analysis of social media data can help determine the preferences and opinions of the Iranian people. Independent third-party organizations can conduct scientific analyses to ensure transparency and openness in the process.
+% \subsection{How can people inside Iran participate in the assembly?}
+% Digital tools can be employed to enable secure remote participation. Additionally, the analysis of social media data can help determine the preferences and opinions of the Iranian people. Independent third-party organizations can conduct scientific analyses to ensure transparency and openness in the process.
 
-\subsection{What do the Iranian people want?}
-To answer this question, it is essential to examine the past and investigate the demands of the Iranian people. By establishing a secure internet channel and a social democracy platform, data can be collected and analyzed to better understand the desires and aspirations of the Iranian population.
-\subsection{What is the decision-making process?}
-
-
-\subsection{What are the operational strategies?}
-
-\subsection{Can we make an assembly of thousand with participatory deliberate digital democracy platforms?}
+% \subsection{What do the Iranian people want?}
+% To answer this question, it is essential to examine the past and investigate the demands of the Iranian people. By establishing a secure internet channel and a social democracy platform, data can be collected and analyzed to better understand the desires and aspirations of the Iranian population.
+% \subsection{What is the decision-making process?}
 
 
+% \subsection{What are the operational strategies?}
+
+% \subsection{Can we make an assembly of thousand with participatory deliberate digital democracy platforms?}
 
 
-\section{Future work}
-Future work includes answering the open research questions, and writing a scientific peer-reviewd blueprint.
+
+
+% \section{Future work}
+% Future work includes answering the open research questions, and writing a scientific peer-reviewd blueprint.
 
 \clearpage
 \newpage
