--- a/latex/os-research.tex
+++ b/latex/os-research.tex
@@ -214,7 +214,7 @@ This work investigates state-of-the-art digital democracy platforms and methodol
 \section{Motivation}
 
 Democracy is essential for fostering inclusive and just societies. However, the people of Iran currently face a totalitarian regime that restricts their access to democratic processes. Digital democracy offers a potential solution by leveraging digital technologies to overcome the challenges posed by the current regime.
-For instance, the Mahsa Prism's democracy could be enhanced using the proposed methodology. This would involve open-sourcing the Mahsa Prism, increasing the transparency of the process, analyzing public opinions on social media, and establishing a question-and-answer platform to address the concerns of the Iranian people.
+For instance, the Mahsa Charter's democracy could be enhanced using the proposed methodology. This would involve open-sourcing the Mahsa Charter, increasing the transparency of the process, analyzing public opinions on social media, and establishing a question-and-answer platform to address the concerns of the Iranian people.
 Furthermore, research on digital democracy can contribute to the development of democratic processes in a future democratic Iran. This can be achieved by investigating the current state of digital democracy and proposing new solutions that align with the diverse cultural context of the Iranian people.
 
 \section{Research Questions}
