adding references for civic tech and vTaiwan

--- a/latex/os-research.tex
+++ b/latex/os-research.tex
@@ -195,7 +195,7 @@
 }
 \date{January 2023}
 
-\addbibresource{ref.bib}
+% \addbibresource{ref.bib}
 
 
 \begin{document}
@@ -336,18 +336,15 @@ When examining digital democracy in the context of deliberative democracy, resea
 By addressing these questions, academic research on digital democracy can contribute to the development of digital tools and practices that better support deliberative democratic processes and foster more informed and inclusive political decision-making.
 
 
-\subsection{Civic Technology of Democracy}
+\subsection{Civic Technology and Democracy}
 
+Civic technology, or civic tech, encompasses the use of technology to strengthen the relationship between citizens and their governments, encourage public participation, and promote democratic processes \cite{zhang2022review}. This involves the creation of digital platforms, tools, and applications that empower citizens to express their opinions, engage in decision-making, and hold governments accountable \cite{zhang2022review}. Examples of civic technology include online platforms for policy deliberation, participatory budgeting, and crowdsourcing solutions to local problems \cite{zhang2022review,tseng2022rethinking}.
 
-Civic technology, also known as civic tech, refers to the employment of technology to enhance the relationship between citizens and their governments, facilitate public participation, and promote democratic processes \cite{hollands2015civic}. It encompasses the development of digital platforms, tools, and applications that empower citizens to voice their opinions, engage in decision-making, and hold governments accountable \cite{susha2015civic}. Examples of civic technology include online platforms for policy deliberation, participatory budgeting, and crowdsourcing solutions to local problems \cite{schrock2016civic}.
+As stated by Dr. Tsai Ing-Wen, the former President of Taiwan, the objective is to "build a unified democracy, not hijacked by ideologies; an efficient democracy that responds to the demands of the environment; and a pragmatic democracy that will let people take care of each other's feelings."
 
-As articulated by Dr. Tsai Ing-Wen, the former President of Taiwan, the goal is to "build a unified democracy, not hijacked by ideologies; an efficient democracy that responds to the demands of the environment; and a pragmatic democracy that will let people take care of each other's feelings" 
+Civic technology plays a vital role in digital democracy, as it helps bridge the gap between citizens and their governments, fostering greater transparency, responsiveness, and collaboration in addressing societal challenges \cite{zhang2022review}. By utilizing civic technology, democratic processes can become more inclusive and effective, leading to improved public policies and services that reflect the needs and values of all citizens \cite{tseng2022rethinking,zhang2022review}.
 
-Civic technology constitutes a critical component of digital democracy, as it can help bridge the gap between citizens and their governments, fostering greater transparency, responsiveness, and collaboration in addressing societal challenges \cite{townsend2013smart}. By leveraging civic technology, democratic processes can become more inclusive and effective, leading to improved public policies and services that reflect the needs and values of all citizens \cite{hollands2015civic}.
-
-A case in point is the 1922 Citizen Hotline in Taiwan, which enables citizens to voice their opinions and concerns, provide feedback on government decision-making, and report issues related to public services. During the COVID-19 pandemic, a child called the hotline to complain about receiving a pink mask and expressed embarrassment at having to wear it due to gender stereotypes. In response, hospitals and government officials announced that they would begin using pink masks, challenging gender stereotypes and promoting social innovation.
-
-
+The 1922 Citizen Hotline in Taiwan serves as an example of effective civic technology. It allows citizens to share their opinions and concerns, provide feedback on government decision-making, and report issues related to public services. During the COVID-19 pandemic, a child contacted the hotline to complain about receiving a pink mask, feeling embarrassed to wear it due to gender stereotypes. In response, hospitals and government officials announced that they would begin using pink masks, challenging gender stereotypes and promoting social innovation \cite{hamm2021makes}.
 
 
 \subsection{Smart Cities}
@@ -383,8 +380,12 @@ A digital democracy widely used tool is pol.is. Pol.is is a social media platfor
 With social innovation and deliberative digital democracy platforms, even with controversial and polarized subjects people can reach consensus.
 
 \subsection{vTaiwan}
-Digital democracy in Taiwan was started in 2014. This initiative is called vTaiwan and the “v” stands for “vision”, “voice”, “vote” and “virtual”. The participatory and deliberative democracy process in Taiwan has four stages and it is based on the focus conversation method. In the first stage, issues are identified, and then people’s facts, objectives, and experiences about the issues are collected. In the second stage, people's feelings about objectives and statements are collected. In the third stage, after people converge on sets of feelings that resonate with everyone, ideas on how to address them are collected. In the fourth state, the idea that is consensus is translated into legalese and signed into law. At each stage transition to the next one is done when a rough consensus is formed.
 
+vTaiwan is an open consultation process launched in 2014 that brings together Taiwanese citizens and government in both online and offline spaces. It aims to foster deliberation and reach a rough consensus on national issues while crafting digital legislation. The initiative provides an interactive environment that engages citizens in shaping the democratic process and addressing existing forms of power through consensus-building \cite{vtaiwan}.
+
+The participatory and deliberative democracy process in vTaiwan is structured around the focus conversation method and consists of four stages. In the first stage, issues are identified, and facts, objectives, and experiences relating to them are collected. The second stage involves gathering participants' feelings and sentiments about these objectives and statements. In the third stage, participants converge on sets of feelings that resonate with everyone and brainstorm ideas on how to address these concerns. Finally, in the fourth stage, a rough consensus is formed around an idea, which is then translated into legalese and signed into law \cite{vtaiwan}.
+
+Throughout the process, each stage transitions to the next only when a rough consensus is achieved, ensuring that the final outcome reflects the collective wisdom of participants in the vTaiwan initiative \cite{vtaiwan}. 
 
 \subsection{Public Digital Innovation Space}
 PDIS, or Public Digital Innovation Space, is a public innovation lab that has emerged as a leading force in promoting digital democracy and social innovation in Taiwan. PDIS seeks to foster collaboration and co-creation among citizens, government agencies, and civic groups to develop innovative solutions to public problems.
