--- a/latex/ref.bib
+++ b/latex/ref.bib
@@ -1,3 +1,11 @@
+
+@article{vtaiwan,
+  title={vTaiwan: An empirical study of open consultation process in Taiwan},
+  author={Hsiao, Yu-Tang and Lin, Shu-Yang and Tang, Audrey and Narayanan, Darshana and Sarahe, Claudina},
+  year={2018},
+  publisher={SocArXiv}
+}
+
 @book{dibona1999opensource,
   title={Open sources: Voices from the open source revolution},
   author={DiBona, Chris and Ockman, Sam},
@@ -238,47 +246,47 @@ year={2005},
 publisher={CSLI Publications}
 }
 
-@book{fishkin2009virtual,
-title={Virtual Public Consultation: Prospects for Internet Deliberative Democracy},
-author={Fishkin, James S. and Luskin, Robert C.},
-year={2009},
-publisher={Journal of Public Deliberation}
+@article{fishkin2009virtual,
+  title={Virtual public consultation: Prospects for internet deliberative democracy},
+  author={Fishkin, James S},
+  journal={Online deliberation: Design, research, and practice},
+  pages={23--35},
+  year={2009},
+  publisher={Citeseer}
 }
 
 
 
-@article{hollands2015civic,
-title={Civic Tech at the Intersection of Technology and Society},
-author={Hollands, Robert G.},
-journal={Journal of Urban Technology},
-volume={22},
-number={2},
-pages={63--68},
-year={2015},
-publisher={Taylor & Francis}
+
+@article{zhang2022review,
+  title={A Review of Research on Civic Technology: Definitions, Theories, History and Insights},
+  author={Zhang, Weiyu and Lim, Gionnieve and Perrault, Simon and Wang, Chuyao},
+  journal={arXiv preprint arXiv:2204.11461},
+  year={2022}
 }
 
-@article{susha2015civic,
-title={Civic Technology for Collective Sense-Making},
-author={Susha, Iryna and Janssen, Marijn},
-journal={Government Information Quarterly},
-volume={32},
-number={3},
-pages={254--262},
-year={2015},
-publisher={Elsevier}
+
+
+@inproceedings{hamm2021makes,
+  title={What makes civic tech initiatives to last over time? Dissecting two global cases},
+  author={Hamm, Andrea and Shibuya, Yuya and Ullrich, Stefan and Cerratto Pargman, Teresa Cerratto},
+  booktitle={Proceedings of the 2021 CHI Conference on Human Factors in Computing Systems},
+  pages={1--17},
+  year={2021}
 }
 
-@article{schrock2016civic,
-title={Civic Tech: Making Technology Work for People},
-author={Schrock, Andrew R.},
-journal={New Media & Society},
-volume={18},
-number={4},
-pages={665--669},
-year={2016},
-publisher={SAGE Publications Sage UK: London, England}
+@article{tseng2022rethinking,
+  title={Rethinking gamified democracy as frictional: a comparative examination of the Decide Madrid and vTaiwan platforms},
+  author={Tseng, Yu-Shan},
+  journal={Social \& Cultural Geography},
+  pages={1--18},
+  year={2022},
+  publisher={Taylor \& Francis}
 }
+
+
+
+
 
 @book{townsend2013smart,
 title={Smart Cities: Big Data, Civic Hackers, and the Quest for a New Utopia},
@@ -286,3 +294,4 @@ author={Townsend, Anthony M.},
 year={2013},
 publisher={WW Norton & Company}
 }
+
